fix: ellipse overflow for download page

--- a/web/app/download/page.module.scss
+++ b/web/app/download/page.module.scss
@@ -49,6 +49,8 @@
     width: 50%;
     text-align: right;
     font-size: .9rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .row {
